--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
     -->
     <!-- fontawesome cdn  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-
-
+    <!-- google fonts  -->
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@1,600&family=Righteous&display=swap" rel="stylesheet">
     
     <title>Travelo</title>
   </head>
